# vk-rs-bindings

./: .gitignore  Cargo.toml  HANDLES.md  LICENSE  README.md  generate.sh
.cargo/: config.toml
vk-alloc/: Cargo.toml  USAGE.md
vk-alloc/benches/: hot_paths.rs
vk-alloc/examples/: basic_allocator.rs  device_group_allocator.rs  pool_allocator.rs
vk-alloc/examples/shared/: bootstrap.rs  device_select.rs  group_select.rs  mod.rs  validation.rs
vk-alloc/src/: allocation.rs  allocator.rs  bench_helpers.rs  error.rs  group_allocator.rs  lib.rs  pool.rs  resource.rs  sparse.rs  stats.rs
vk-alloc/src/group/: bind.rs  device_mask.rs  mod.rs  mode.rs
vk-alloc/src/internal/: arena.rs  block.rs  buddy.rs  device_group.rs  mod.rs  page_table.rs  vk_ops.rs
vk-alloc/src/memory/: arena.rs  arena_key.rs  block.rs  mod.rs  owned.rs  range_allocator.rs  select.rs
vk-alloc/src/vulkan/: import.rs  limits.rs  mod.rs  requirements.rs
vk-alloc/tests/unit/: concurrency.rs  internals.rs  limits.rs  mod.rs
vk-codegen/: Cargo.toml  README.md
vk-codegen/src/: cfggen.rs  codegen.rs  ir.rs  lib.rs  main.rs  parser.rs  types.rs
vk-codegen/src/codegen/: cargo_toml.rs  command_buffer_rs.rs  command_pool_rs.rs  commands_rs.rs  consts_rs.rs  device_rs.rs  dot.rs  entry_rs.rs  enums_rs.rs  handles_rs.rs  instance_rs.rs  lib_rs.rs  loader_rs.rs  mod.rs  physical_device_rs.rs  queue_rs.rs  types_rs.rs  utils.rs  validation_rs.rs
vk-codegen/src/parser/: commands.rs  enums.rs  features.rs  mod.rs  nodes.rs  types.rs
vk-codegen/tests/: integration_test.rs
vk-codegen/tests/fixtures/: vk_minimal.xml
vk-demo/: Cargo.toml  build.rs
vk-demo/compute/: Cargo.toml  build.rs
vk-demo/compute-vulkan-1-0/: Cargo.toml  build.rs
vk-demo/compute-vulkan-1-0/src/: main.rs  shader.glsl
vk-demo/compute/src/: main.rs  shader.glsl
vk-demo/prefix-sum/: Cargo.toml  build.rs
vk-demo/prefix-sum/src/: main.rs  prefix_sum.glsl
vk-demo/query-info/: Cargo.toml
vk-demo/query-info/src/: main.rs
vk-demo/queue-family-ownership-transfer/: Cargo.toml
vk-demo/queue-family-ownership-transfer/src/: main.rs
vk-demo/spinning-triangle/: Cargo.toml
vk-demo/spinning-triangle/src/: main.rs
vk-demo/src/: compute.rs  main.rs  shader.spv  spinning_triangle.rs
vk-rs-bindings/: Cargo.toml
vk-rs-bindings/src/: acceleration_structure_khr.rs  acceleration_structure_nv.rs  buffer.rs  buffer_collection_fuchsia.rs  buffer_view.rs  command_buffer.rs  command_pool.rs  commands.rs  consts.rs  cu_function_nvx.rs  cu_module_nvx.rs  cuda_function_nv.rs  cuda_module_nv.rs  data_graph_pipeline_session_arm.rs  debug_report_callback_ext.rs  debug_utils_messenger_ext.rs  deferred_operation_khr.rs  descriptor_pool.rs  descriptor_set.rs  descriptor_set_layout.rs  descriptor_update_template.rs  descriptor_update_template_khr.rs  device.rs  device_memory.rs  entry.rs  enums.rs  event.rs  external_compute_queue_nv.rs  fence.rs  framebuffer.rs  gpa_session_amd.rs  image.rs  image_view.rs  indirect_commands_layout_ext.rs  indirect_commands_layout_nv.rs  indirect_execution_set_ext.rs  instance.rs  lib.rs  micromap_ext.rs  optical_flow_session_nv.rs  (+28 more)
windsurf/: Cargo.toml  README.md  USAGE.md
windsurf-core/: Cargo.toml  README.md
windsurf-core/src/: backend.rs  cursor.rs  drag_drop.rs  event.rs  feature.rs  gamepad.rs  geometry.rs  ime.rs  input.rs  lib.rs  queue.rs  window.rs
windsurf-examples/: Cargo.toml  README.md  build.rs
windsurf-examples/examples/: basic_window.rs  basic_window_app.rs  basic_window_vulkan.rs  multi_window_shared_state.rs
windsurf-examples/shaders/: triangle.vert
windsurf-extra/: Cargo.toml  README.md
windsurf-extra/src/: cursor.rs  drag_drop.rs  event.rs  feature.rs  gamepad.rs  ime.rs  lib.rs  queue.rs
windsurf-macos/: Cargo.toml  README.md
windsurf-macos/src/: app.rs  cursor.rs  display.rs  drag.rs  error.rs  input.rs  keymap.rs  lib.rs  raw.rs  state.rs  window.rs
windsurf-wayland/: Cargo.toml  README.md
windsurf-wayland/examples/: basic_window.rs
windsurf-wayland/src/: display.rs  error.rs  ext_background_effect.rs  input.rs  lib.rs  raw.rs  shell.rs  state.rs  util.rs  window.rs  xkb.rs
windsurf/examples/: extra_features.rs  queues.rs
windsurf/src/: lib.rs
