[workspace]
members = [
  "vk-codegen",
  "vk-alloc",
  "vk-rs-bindings",
  "vk-demo",
  "windsurf-core",
  "windsurf-examples",
  "windsurf-macos",
  "windsurf-wayland",
  "windsurf",
]

resolver = "3"

[profile.release]
opt-level = 3
lto = false
codegen-units = 1
strip = "symbols"
panic = "abort"
