[package]
name = "windsurf-core"
version = "0.1.0"
edition = "2024"
description = "Minimal poll-driven windowing primitives for windsurf"
readme = "README.md"

[lints.clippy]
pedantic = "deny"
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
