[package]
name = "windsurf-wayland"
version = "0.1.0"
edition = "2024"
description = "Wayland backend for the windsurf windowing APIs"
readme = "README.md"

[dependencies]
raw-window-handle = "0.6.2"
windsurf-core = { path = "../windsurf-core", features = ["ime", "cursor", "drag_drop", "gamepad"] }

[target.'cfg(target_os = "linux")'.dependencies]
memmap2 = "0.9.5"
wayland-backend = { version = "0.3.15", features = ["client_system", "rwh_06"] }
wayland-client = "0.31.14"
wayland-protocols = { version = "0.31.2", features = ["client", "staging", "unstable"] }
xkbcommon-dl = "0.4.2"

[lints.clippy]
pedantic = "deny"
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
too_many_lines = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_possible_wrap = "allow"
