[package]
name = "windsurf-wayland"
version = "0.1.0"
edition = "2024"
description = "Wayland backend for the windsurf windowing APIs"
readme = "README.md"

[features]
default = []
ime = ["windsurf-core/ime"]
cursor = ["windsurf-core/cursor", "wayland-protocols/staging"]
drag_drop = ["windsurf-core/drag_drop"]
gamepad = ["windsurf-core/gamepad"]

[dependencies]
raw-window-handle = "0.6.2"
windsurf-core = { path = "../windsurf-core" }
libc = "0.2"
parking_lot = "0.12.5"
smallvec = "1.15.1"

[target.'cfg(target_os = "linux")'.dependencies]
bitflags = "2.6"
memmap2 = "0.9.5"
wayland-backend = { version = "0.3.15", features = ["client_system", "rwh_06"] }
wayland-client = "0.31.14"
wayland-scanner = "0.31.10"
wayland-protocols = { version = "0.31.2", default-features = false, features = ["client", "unstable"] }
wayland-protocols-plasma = { version = "0.2.0", default-features = false, features = ["client"] }
xkbcommon-dl = "0.4.2"

[lints.clippy]
pedantic = "deny"
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
too_many_lines = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_possible_wrap = "allow"
