[package]
name = "windsurf"
version = "0.1.0"
edition = "2024"
description = "Facade crate for windsurf windowing APIs"
readme = "README.md"

[features]
default = []
macos = ["dep:windsurf-macos"]
wayland = ["dep:windsurf-wayland"]

[dependencies]
windsurf-core = { path = "../windsurf-core", features = ["ime", "cursor", "drag_drop", "gamepad"] }
windsurf-macos = { path = "../windsurf-macos", optional = true }
windsurf-wayland = { path = "../windsurf-wayland", optional = true }

[lints.clippy]
pedantic = "deny"
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
