[package]
name = "windsurf"
version = "0.1.0"
edition = "2024"
description = "Facade crate for windsurf windowing APIs"
readme = "README.md"

[features]
default = []
macos = ["dep:windsurf-macos"]
wayland = ["dep:windsurf-wayland"]
ime = ["windsurf-core/ime"]
cursor = ["windsurf-core/cursor"]
drag_drop = ["windsurf-core/drag_drop"]
gamepad = ["windsurf-core/gamepad"]

[dependencies]
raw-window-handle = "0.6.2"
windsurf-core = { path = "../windsurf-core" }
windsurf-macos = { path = "../windsurf-macos", optional = true }
windsurf-wayland = { path = "../windsurf-wayland", optional = true }

[lints.clippy]
pedantic = "deny"
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
