[package]
name = "windsurf"
version = "0.1.0"
edition = "2024"
description = "Facade crate for windsurf windowing APIs"
readme = "README.md"

[features]
default = []
macos = ["dep:windsurf-macos"]
wayland = ["dep:windsurf-wayland"]
ime = ["windsurf-core/ime", "windsurf-macos?/ime", "windsurf-wayland?/ime"]
cursor = [
  "windsurf-core/cursor",
  "windsurf-macos?/cursor",
  "windsurf-wayland?/cursor",
]
drag_drop = [
  "windsurf-core/drag_drop",
  "windsurf-macos?/drag_drop",
  "windsurf-wayland?/drag_drop",
]
gamepad = [
  "windsurf-core/gamepad",
  "windsurf-macos?/gamepad",
  "windsurf-wayland?/gamepad",
]

[dependencies]
raw-window-handle = "0.6.2"
windsurf-core = { path = "../windsurf-core" }
windsurf-macos = { path = "../windsurf-macos", optional = true, default-features = false }
windsurf-wayland = { path = "../windsurf-wayland", optional = true, default-features = false }

[lints.clippy]
pedantic = "deny"
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
