[package]
name = "vk-demo-prefix-sum"
version = "0.1.0"
edition = "2024"
description = "Work-efficient Vulkan compute prefix sum demo"
build = "build.rs"

[dependencies]
vk-alloc = { path = "../../vk-alloc" }

[dependencies.vk]
path = "../../vk-rs-bindings"
package = "vk-rs-bindings"
features = ["VK_COMPUTE_VERSION_1_4"]
