[package]
name = "vk-demo-spinning-triangle"
version = "0.1.0"
edition = "2024"
description = "Spinning triangle demo of vk-rs-bindings"
build = "build.rs"

[dependencies]
winit = "0.29"
raw-window-handle = "0.6.2"

[dependencies.vk]
path = "../../vk-rs-bindings"
package = "vk-rs-bindings"
features = [
  "VK_VERSION_1_4",
  "VK_KHR_surface",
  "VK_KHR_swapchain",
]

[target.'cfg(target_os = "linux")'.dependencies.vk]
path = "../../vk-rs-bindings"
package = "vk-rs-bindings"
features = ["VK_KHR_wayland_surface"]

[target.'cfg(target_os = "macos")'.dependencies]
raw-window-metal = "1.1.0"

[target.'cfg(target_os = "macos")'.dependencies.vk]
path = "../../vk-rs-bindings"
package = "vk-rs-bindings"
features = ["VK_EXT_metal_surface"]
